# dnnlibrary-example

./: .travis.yml  README.md  build.gradle
app/: build.gradle
app/src/main/java/me/daquexian/nnapiexample/: MainActivity.java
app/src/main/res/layout/: activity_main.xml
app/src/main/res/values/: strings.xml
dnnlibrary/: build.gradle
dnnlibrary/cpp/: CMakeLists.txt  JavaWrapper.cpp
gradle/wrapper/: gradle-wrapper.properties
openCVLibrary340/: build.gradle
